# next-solana

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.js  env.example  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  renovate.json  supabase-schema.sql
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows_temp/: dependency-updates.yml.bak
.husky/: commit-msg  pre-commit  pre-push
anchor/: Anchor.toml
anchor/programs/basic/: Cargo.toml
anchor/programs/basic/src/: lib.rs
app/[lng]/: layout-new.tsx  layout.tsx  page-new.tsx  page.tsx
app/[lng]/components/: LanguageSwitcher.tsx  TranslatedContent.tsx
app/components/: index.ts  language-switcher.tsx
components/: conditional-liquidity-panel.tsx  dashboard.tsx  index.ts  language-switcher.tsx  portfolio-display.tsx  theme-provider.tsx  theme-switcher.tsx  token-selector.tsx  trading-interface.tsx  wallet-connect.tsx
components/ui/: index.ts
hooks/: index.ts  use-conditional-liquidity.ts  use-wallet.ts
lib/: analytics.ts  conditional-liquidity.ts  env.ts  index.ts  jupiter.ts  metadata.ts  pricing.ts  solana-mock.ts  solana.ts  supabase.ts  tokens.ts  types.ts
lib/i18n/: client.ts  index.ts  server.ts  settings.ts
lib/react-query/: client.ts  index.ts  provider.tsx  queries.ts
scripts/: setup-env.js
src/app/: page.tsx
src/components/: app-layout.tsx  app-status.tsx
src/hooks/: use-app-config.ts
src/lib/: config.ts  jupiter.ts  supabase.ts
(+13 files in other folders)
