[package]
name = "solana-dex"
version = "0.1.0"
description = "Modern DEX on Solana with concentrated liquidity and advanced trading features"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_dex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

